k8s-cloud/cert-manager/ingress_working_for_domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentourney-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod" # Specify the issuer for the certificate
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - broadvision.eu.org
      secretName: example-app-tls
  rules:
    - host: broadvision.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ws
                port:
                  number: 8080
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: ws
                port:
                  number: 8080
          - path: /backend-images
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
